prac6/EBNF.bnf
EBNF = { Production } EOF .
Production = nonterminal "=" Expression "." .
Expression = Term { "|" Term } .
Term = [ Factor { Factor } ] .
Factor   = nonterminal | terminal
       | "[" Expression "]" | "(" Expression ")" | "{" Expression "}" .
